# tagnet

./: .gitignore  Cargo.toml  DATA_FLOW.md  EDIT_COMMAND_PLAN.md  PORTABILITY_PLAN.md  README.md  STREAMING_FOLLOWUPS.md  flake.nix  flutter_rust_bridge.yaml  module.nix  plan.md  rust-toolchain.toml  tagnet-cli.nix  tagnet.nix  tagnetd.nix
app/: README.md  analysis_options.yaml  pubspec.yaml
app/android/: build.gradle.kts
app/android/app/: build.gradle.kts
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/kotlin/com/example/tagnet_app/: MainActivity.kt  TagnetConfig.kt  TagnetService.kt
app/android/app/src/main/res/drawable/: ic_launcher_foreground.xml
app/android/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml  ic_launcher_round.xml
app/android/app/src/main/res/values/: colors.xml
app/config/: phone-config.json  sylvie-phone-config.json
app/lib/: app.dart  main.dart  tagnet_service.dart
app/lib/bootstrap/: android_bootstrap.dart  bootstrap.dart  linux_bootstrap.dart
app/lib/rust/: api.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  runtime.dart
app/lib/screens/: file_detail_screen.dart  home_screen.dart  search_screen.dart  tag_detail_screen.dart  tags_screen.dart
app/lib/widgets/: file_preview.dart  property_tile.dart  tag_chip.dart
app/linux/: CMakeLists.txt
app/linux/runner/: CMakeLists.txt  my_application.cc
app/test/: widget_test.dart
nix/: module.nix  tagnet.nix  tagnetd.nix
tagnet/: Cargo.toml  package.json
tagnet-bridge/: Cargo.toml
tagnet-bridge/android/: README.md
tagnet-bridge/android/manifest/: AndroidManifest.xml
tagnet-bridge/android/service/: TagnetService.kt
tagnet-bridge/app-template/lib/: main.dart
tagnet-bridge/src/: api.rs  frb_generated.rs  jni.rs  lib.rs  logging.rs  runtime.rs  service.rs
tagnet-cli/: Cargo.toml
tagnet-cli/src/: main.rs
tagnet-core/: Cargo.toml
tagnet-core/src/: lib.rs  nextcloud.rs
tagnet/src/: api.rs  bus.rs  configuration.rs  control.rs  database.rs  directory_manager.rs  fetch.rs  identity.rs  lib.rs  main.rs  paths.rs  transport.rs  watcher.rs
tagnet/src-tauri/: Cargo.toml  tauri.conf.json
tagnet/src-tauri/src/: lib.rs  main.rs
tagnet/src/routes/: +page.svelte
tagnetd/: Cargo.toml
tagnetd/src/: api.rs  bus.rs  configuration.rs  control.rs  database.rs  directory_manager.rs  fetch.rs  file_bytes.rs  identity.rs  lib.rs  main.rs  paths.rs  transfer.rs  transport.rs  watcher.rs
