[package]
name = "tagnet-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
blake3 = "1.5"
clap = { version = "4.5.20", features = ["derive"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tagnet-core = { workspace = true }
tokio = { version = "1.48", features = ["full"] }
tokio-tungstenite = { version = "0.28", features = ["connect"] }
