[package]
name = "tagnet-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rusqlite = { version = "0.32.0", features = ["bundled"] }
uuid = { version = "1.11", features = ["v4"] }

reqwest = { version = "0.12", features = ["json"], optional = true }
serde_json = { version = "1.0", optional = true }
xmltree = { version = "0.11", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
base64 = { version = "0.22.1", optional = true }

[features]
nextcloud = ["reqwest", "serde_json", "xmltree", "tokio", "base64"]
