[package]
name = "tagnet"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22"
clap = { version = "4.5.20", features = ["derive"] }
futures-util = "0.3"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tagnet-core = { workspace = true }
tokio = { version = "1.48", features = ["full"] }
tokio-tungstenite = "0.28"
notify = "8.2"
env_logger = "0.11"
log = "0.4"
walkdir = "2.5"
