[package]
name = "tagnet"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "tagnet"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
comfy-table = { version = "7", features = ["custom_styling"] }
owo-colors = "4"
tagnetd = { path = "../tagnetd" }
tagnet-core = { workspace = true }
tempfile = "3"
tokio = { version = "1.48", features = ["full"] }
