[package]
name = "tagnetd"
version = "0.1.0"
edition = "2024"

[lib]
name = "tagnetd"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "tagnetd"
path = "src/main.rs"

[dependencies]
base64 = "0.22"
blake3 = "1.5"
clap = { version = "4.5.20", features = ["derive"] }
ed25519-dalek = "2"
futures-util = "0.3"
rand = "0.8"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"
tagnet-core = { workspace = true }
tokio = { version = "1.48", features = ["full"] }
tokio-tungstenite = "0.28"
tokio-util = "0.7"
uuid = "1"
notify = "8.2"
env_logger = "0.11"
log = "0.4"
walkdir = "2.5"
